fixed delete and edit button spacing and colored buttons on hover

--- a/src/index.css
+++ b/src/index.css
@@ -491,7 +491,6 @@ img.profPicHome {
 
 
 
-
 /*************************************************CARD***************************************************/
 .card.actCard {
   border-radius: 1.0rem;
@@ -966,4 +965,14 @@ img.profPicHome {
       margin-left: 0px;
     }
 
+}
+
+.edit-btn:hover{
+  background-color: rgba(255,255,0,.3);
+  border-color: rgba(255,255,0,.3);
+ }
+.delete-btn:hover{
+  background-color: rgba(255,0,0,.5);
+  border-color: rgba(255,0,0,.5);
+  color:white;
 }
